--- a/WebApplication7/Views/Home/Index.cshtml
+++ b/WebApplication7/Views/Home/Index.cshtml
@@ -2,5 +2,5 @@
     ViewData["Title"] = "Home Page";
 }
 <div>
-    @(await Html.RenderComponentAsync<WebApplication7.Components.Component>(RenderMode.ServerPrerendered, new { Data = " Hello World " }))
+    @(await Html.RenderComponentAsync<WebApplication7.Components.Component>(RenderMode.ServerPrerendered))
 </div> 
